--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     "require": {
         "php": "^7.2",
         "darryldecode/cart": "^4.1",
-        "drudge-rajen/voyager-deployment-orchestrator": "^2.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
+        "orangehill/iseed": "^2.6",
         "tcg/voyager": "^1.3"
     },
     "require-dev": {
