--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^1.1",
+        "nicolaslopezj/searchable": "^1.12",
         "orangehill/iseed": "^2.6",
         "tcg/voyager": "^1.3"
     },
