--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/ui": "^2.0",
         "nicolaslopezj/searchable": "^1.12",
         "orangehill/iseed": "^2.6",
+        "srmklive/paypal": "~1.0",
         "tcg/voyager": "^1.3"
     },
     "require-dev": {
