--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "livewire/livewire": "^1.1",
         "nicolaslopezj/searchable": "^1.12",
         "orangehill/iseed": "^2.6",
         "srmklive/paypal": "~1.0",
