--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "nicolaslopezj/searchable": "^1.12",
         "orangehill/iseed": "^2.6",
         "srmklive/paypal": "~1.0",
+        "livewire/livewire": "^1.1",
         "tcg/voyager": "^1.3"
     },
     "require-dev": {
