--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "orangehill/iseed": "^2.6",
         "srmklive/paypal": "~1.0",
         "livewire/livewire": "^1.1",
-        "tcg/voyager": "^1.3"
+        "tcg/voyager": "1.4.*"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
